examples/test/testpolicy8753.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8753
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key5: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value23
          key49: value8
          key8: value20
      podSelector:
        matchLabels:
          key47: value44
          key25: value33
